--- a/tools/templates/common-dev.jinja
+++ b/tools/templates/common-dev.jinja
@@ -5,7 +5,7 @@
     }
   },
   "terraform": {
-    "required_version": "~> 0.11.0",
+    "required_version": "{{ terraform_version }}",
     "backend": {
       "azurerm": {
         "resource_group_name": "webops",
@@ -19,7 +19,7 @@
     "azurerm": {
       "tenant_id": "747381f4-e81f-4a43-bf68-ced6a1e14edf",
       "subscription_id": "c27cfedb-f5e9-45e6-9642-0fad1a5c94e7",
-      "version": "0.3.3"
+      "version": "{{ azurerm_version }}"
     }
   }
 }
